kubernetes/app/nodeapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-svc
  labels:
    app: nodeapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: nodeapp
